--- a/index.html
+++ b/index.html
@@ -1,36 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+		<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+		<title>Frontend Mentor | Article preview component</title>
+	</head>
+	
+	<body>
+		<div class='banner'><img class='banner-img' src='#'></div>
+		
+		<main>
+			<div class='text'>
+				<h1 class='text-title'>Shift the overall look and feel by adding these wonderful 
+				touches to furniture in your home</h1>
+				<p class='text-body'>Ever been in a room and felt like something was missing? Perhaps 
+				it felt slightly bare and uninviting. I’ve got some simple tips 
+				to help you make any room feel complete.</p>
+			</div>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Article preview component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
-
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
-
-  Michelle Appleton
-  28 Jun 2020
-
-  Share
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+			<div class='bar-1'>
+				<div class='author-img-container'><img class='author-img' src='#'></div>
+				<h2 class='author-name'>Michelle Appleton</h2>
+				<p class='date'>28 Jun 2020</p>
+				<div class='arrow-img-container'><img class='arrow-img light' src='#'></div>
+			</div>
+			<div class='bar-2'>
+				<p class='share'>Share</p>
+				<div class='social'>
+					<img class='social-icon-img' src='#'>
+					<img class='social-icon-img' src='#'>
+					<img class='social-icon-img' src='#'>
+				</div>
+				<div class='arrow-img-container'><img class='arrow-img dark' src='#'></div>
+			</div>
+		</main>
+		
+		<div class="attribution">
+			Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+			Coded by <a href="#">Your Name Here</a>.
+		</div>
+	</body>
+	
 </html>
