--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-		<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+		<meta charset='UTF-8'>
+		<meta name='viewport' content='width=device-width, initial-scale=1.0'> <!-- displays site properly based on user's device -->
+		<link rel='icon' type='image/png' sizes='32x32' href='./images/favicon-32x32.png'>
+		<link rel='stylesheet' type='text/css' href='./styles/style.css'>
 		<title>Frontend Mentor | Article preview component</title>
 	</head>
 	
 	<body>
-		<div class='banner'><img class='banner-img' src='#'></div>
+		<div class='banner'></div>
 		
 		<main>
 			<div class='text'>
@@ -18,21 +19,22 @@
 				it felt slightly bare and uninviting. I’ve got some simple tips 
 				to help you make any room feel complete.</p>
 			</div>
-
-			<div class='bar-1'>
-				<div class='author-img-container'><img class='author-img' src='#'></div>
-				<h2 class='author-name'>Michelle Appleton</h2>
-				<p class='date'>28 Jun 2020</p>
-				<div class='arrow-img-container'><img class='arrow-img light' src='#'></div>
-			</div>
-			<div class='bar-2'>
-				<p class='share'>Share</p>
-				<div class='social'>
-					<img class='social-icon-img' src='#'>
-					<img class='social-icon-img' src='#'>
-					<img class='social-icon-img' src='#'>
+			<div class='bar bar-1'>
+				<img class='author-img' src='./images/avatar-michelle.jpg'>
+				<div class='name-date'>
+					<h2 class='author-name'>Michelle Appleton</h2>
+					<p class='date'>28 Jun 2020</p>
 				</div>
-				<div class='arrow-img-container'><img class='arrow-img dark' src='#'></div>
+				<div class='arrow-img-container light'><img class='arrow-img light' src='./images/icon-share.svg'></div>
+			</div>
+			<div class='bar bar-2'>
+				<p class='share'>SHARE</p>
+				<div class='social'>
+					<img class='social-icon-img' src='./images/icon-facebook.svg'>
+					<img class='social-icon-img' src='./images/icon-twitter.svg'>
+					<img class='social-icon-img' src='./images/icon-pinterest.svg'>
+				</div>
+				<div class='arrow-img-container dark'><img class='arrow-img dark' src='./images/icon-share-white.svg'></div>
 			</div>
 		</main>
 		
