--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
 			</div>
 		</main>
 		
+		<div class='test'></div>
 		<!--<div class="attribution">
 			Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
 			Coded by <a href="#">Your Name Here</a>.
 		</div>-->
 	</body>
-	
+	<script src='./scripts/script.js'></script>
 </html>
