share menu toggle for the desktop version; script detection of window resizing; small style changes

--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
 			<div class='bar bar-2'>
 				<p class='share'>SHARE</p>
 				<div class='social'>
-					<img class='social-icon-img' src='./images/icon-facebook.svg'>
-					<img class='social-icon-img' src='./images/icon-twitter.svg'>
-					<img class='social-icon-img' src='./images/icon-pinterest.svg'>
+					<a href='#'><img class='social-icon-img' src='./images/icon-facebook.svg'></a>
+					<a href='#'><img class='social-icon-img' src='./images/icon-twitter.svg'></a>
+					<a href='#'><img class='social-icon-img' src='./images/icon-pinterest.svg'></a>
 				</div>
 				<div class='arrow-img-container dark'><img class='arrow-img dark' src='./images/icon-share-white.svg'></div>
+				<div class='triangle'></div>
 			</div>
 		</main>
 		
